# Whalya

./: README.md  settings.gradle.kts
.github/workflows/: android.yaml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/dev.sanmer.whalya.database.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/sanmer/docker/: App.kt  Const.kt
app/src/main/res/drawable/: activity.xml  affiliate.xml  arrow_down_to_arc.xml  arrow_up_to_arc.xml  blocks.xml  box.xml  brackets_angle.xml  brand_docker.xml  browser.xml  check.xml  chevron_right.xml  circle_check.xml  circle_square.xml  clear_all.xml  cloud.xml  cloud_off.xml  cloud_plus.xml  cpu.xml  database.xml  device_floppy.xml  file_certificate.xml  launcher_foreground.xml  player_pause.xml  player_play.xml  player_stop.xml  playstation_circle.xml  presentation_analytics.xml  refresh.xml  restore.xml  search.xml  server_2.xml  settings_2.xml  stack_2.xml  tag.xml  tool.xml  trash.xml  x.xml
app/src/main/res/values/: strings.xml  strings_untranslatable.xml
build-logic/src/main/kotlin/: ComposeConventionPlugin.kt  LibraryConventionPlugin.kt
core/: build.gradle.kts  proguard-rules.pro
core/src/main/jni/: Cargo.toml
core/src/main/jni/src/: lib.rs
core/src/main/res/values/: strings.xml  strings_untranslatable.xml
gradle/: libs.versions.toml
pki-types/: build.gradle.kts  proguard-rules.pro
pki-types/src/main/jni/: Cargo.toml  build.rs  build_jni.sh
pki-types/src/main/jni/.cargo/: config.toml
pki-types/src/main/jni/src/: lib.rs
stub/: build.gradle.kts
(+303 files in other folders)
