[package]
name = "pki_types"
version = "0.1.0"
edition = "2024"

[lib]
name = "pki_types"
crate-type = ["cdylib"]

[dependencies]
tls-pki-types = { git = "https://github.com/SanmerDev/tls-pki-types.git", rev = "a6ee821" }
typed-jni = { version = "1.1", default-features = false }

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1